@@ -12,15 +12,15 @@ oncoplot(maf, top = 20, genes = NULL, mutsig = NULL,
   additionalFeatureCex = 0.9, annotationDat = NULL,
   annotationColor = NULL, genesToIgnore = NULL,
   showTumorSampleBarcodes = FALSE, removeNonMutated = TRUE,
-  fill = FALSE, cohortSize = NULL, colors = NULL,
+  fill = TRUE, cohortSize = NULL, colors = NULL,
   sortByMutation = FALSE, sortByAnnotation = FALSE,
   numericAnnoCol = NULL, groupAnnotationBySize = TRUE,
   annotationOrder = NULL, keepGeneOrder = FALSE,
   GeneOrderSort = TRUE, sampleOrder = NULL, writeMatrix = FALSE,
-  fontSize = 0.8, SampleNamefontSize = 1, showTitle = TRUE,
-  titleFontSize = 1.5, legendFontSize = 1.2,
-  annotationFontSize = 1.2, bgCol = "#CCCCCC", borderCol = "white",
-  colbar_pathway = FALSE)
+  sepwd_genes = 0.5, sepwd_samples = 0.5, fontSize = 0.8,
+  SampleNamefontSize = 1, showTitle = TRUE, titleFontSize = 1.5,
+  legendFontSize = 1.2, annotationFontSize = 1.2, bgCol = "#CCCCCC",
+  borderCol = "white", colbar_pathway = FALSE)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
@@ -90,6 +90,10 @@ You can specify which columns to be drawn using `clinicalFeatures` argument.}
 
 \item{writeMatrix}{writes character coded matrix used to generate the plot to an output file.}
 
+\item{sepwd_genes}{Default 0.5}
+
+\item{sepwd_samples}{Default 0.5}
+
 \item{fontSize}{font size for gene names. Default 0.8.}
 
 \item{SampleNamefontSize}{font size for sample names. Default 1}
@@ -106,7 +110,7 @@ You can specify which columns to be drawn using `clinicalFeatures` argument.}
 
 \item{borderCol}{border grid color (not-mutated) samples. Default 'white'.}
 
-\item{colbar_pathway}{Draw top column bar with respect to diplayed pathway. Default FALSE. Not implemented yet!}
+\item{colbar_pathway}{Draw top column bar with respect to diplayed pathway. Default FALSE.}
 }
 \value{
 None.
