@@ -1,5 +1,7 @@
 CHANGES IN VERSION 2.0.15
 -------------------------
+    o Add sepwd_genes, sepwd_samples to oncoplot. Issue: #340
+    o Avoid plotting legend outside the margin. Issue: #337
     o Add argument for sample ordering in PlotOncogenicPathways. Issue: #332
     o Add cohortSize argument to oncoplot. Issue: #324
     o coOncoPlot: showing sample names has no effect. Issue: #306
